overflow auto was buggy with opera

--- a/css/styles.less
+++ b/css/styles.less
@@ -464,7 +464,7 @@ figure#image_wrapper {
   position: relative;         // place the nav holder inside the picture
   margin: auto;               // center the picture
   margin-bottom: 20px;
-  overflow: auto;             // to prevent breaking when overlapping with aside
+  overflow: hidden;             // to prevent breaking when overlapping with aside
   z-index: 1;                 // will go under the aside if window is too small
   figcaption {
       text-align: center;
